--- a/docker_stuff/Dockerfile.websocket_handler
+++ b/docker_stuff/Dockerfile.websocket_handler
@@ -10,6 +10,6 @@ RUN apk update \
 COPY ws_requirements.txt .
 RUN pip install --no-cache-dir -r ws_requirements.txt
 
-COPY ./python_stuff/websocket*.py .
+COPY ./python_stuff/websocket*.py ./
 
 CMD ["python", "websocket_handler.py"]
