--- a/docker_stuff/Dockerfile.event_handler
+++ b/docker_stuff/Dockerfile.event_handler
@@ -6,7 +6,8 @@ RUN apk update \
         libc-dev \
         g++ \
         make \
-        pkgconf
+        pkgconf \
+        libffi-dev
 
 WORKDIR /app
 
