--- a/docker_stuff/.env
+++ b/docker_stuff/.env
@@ -4,7 +4,11 @@ PGPASSWORD=nostr
 PGPORT=5432
 PGHOST=postgres
 DD_ENV=psycopg_otel
+EVENT_HANDLER_PORT=
+EVENT_HANDLER_SVC=172.28.0.3
+WS_PORT=8008
 REDIS_HOST=redis
+REDIS_PORT=6739
 DD_API_KEY=<YOUR_API_KEY>
 DOMAIN=<YOUR_DOMAIN_HERE>
 HEX_PUBKEY=<YOUR_HEX_PUBKEY>
