--- a/docker_stuff/docker-compose.yaml
+++ b/docker_stuff/docker-compose.yaml
@@ -8,6 +8,7 @@ services:
       - OTEL_EXPORTER_OTLP_ENDPOINT=http://172.28.0.7:4317
       - EVENT_HANDLER_SVC=${EVENT_HANDLER_SVC}
       - EVENT_HANDLER_PORT=${EVENT_HANDLER_PORT}
+      - WS_PORT=${WS_PORT}
     ports:
       - 8008:8008
     networks:
@@ -20,6 +21,7 @@ services:
       dockerfile: Dockerfile.event_handler
     environment:
       - OTEL_EXPORTER_OTLP_ENDPOINT=http://172.28.0.7:4317
+      - EVENT_HANDLER_PORT=${EVENT_HANDLER_PORT}
       - REDIS_HOST=${REDIS_HOST}
       - REDIS_PORT=${REDIS_PORT}
       - PGDATABASE=${PGDATABASE}
