--- a/docker_stuff/Dockerfile.websocket_handler
+++ b/docker_stuff/Dockerfile.websocket_handler
@@ -1,18 +1,14 @@
-FROM python:3.11-alpine
+FROM python:3.11-slim
 
 WORKDIR /app
-
-RUN apk update \
-    && apk add --no-cache \
+RUN apt-get update \
+    && apt-get install -y --no-install-recommends \
         gcc \
+        pkg-config \
         libc-dev \
         g++ \
         make \
-        linux-headers \
-        python3-dev \
-        libffi-dev \
-        openssl-dev \
-        grpc-dev
+    && rm -rf /var/lib/apt/lists/*
 
 COPY ws_requirements.txt .
 RUN pip install --no-cache-dir -r ws_requirements.txt
