--- a/docker_stuff/docker-compose.yaml
+++ b/docker_stuff/docker-compose.yaml
@@ -24,11 +24,16 @@ services:
       - EVENT_HANDLER_PORT=${EVENT_HANDLER_PORT}
       - REDIS_HOST=${REDIS_HOST}
       - REDIS_PORT=${REDIS_PORT}
-      - PGDATABASE=${PGDATABASE}
-      - PGUSER=${PGUSER}
-      - PGPASSWORD=${PGPASSWORD}
-      - PGPORT=${PGPORT}
-      - PGHOST=${PGHOST}
+      - PGDATABASE_WRITE=${PGDATABASE}
+      - PGUSER_WRITE=${PGUSER}
+      - PGPASSWORD_WRITE=${PGPASSWORD}
+      - PGPORT_WRITE=${PGPORT}
+      - PGHOST_WRITE=${PGHOST}
+      - PGDATABASE_READ=${PGDATABASE}
+      - PGUSER_READ=${PGUSER}
+      - PGPASSWORD_READ=${PGPASSWORD}
+      - PGPORT_READ=${PGPORT}
+      - PGHOST_READ=${PGHOST}
     networks:
       nostpy_network:
         ipv4_address: 172.28.0.3
