update v1 nv var

--- a/docker_stuff/docker-compose.yaml
+++ b/docker_stuff/docker-compose.yaml
@@ -24,16 +24,16 @@ services:
       - EVENT_HANDLER_PORT=${EVENT_HANDLER_PORT}
       - REDIS_HOST=${REDIS_HOST}
       - REDIS_PORT=${REDIS_PORT}
-      - PGDATABASE_WRITE=${PGDATABASE}
-      - PGUSER_WRITE=${PGUSER}
-      - PGPASSWORD_WRITE=${PGPASSWORD}
-      - PGPORT_WRITE=${PGPORT}
-      - PGHOST_WRITE=${PGHOST}
-      - PGDATABASE_READ=${PGDATABASE}
-      - PGUSER_READ=${PGUSER}
-      - PGPASSWORD_READ=${PGPASSWORD}
-      - PGPORT_READ=${PGPORT}
-      - PGHOST_READ=${PGHOST}
+      - PGDATABASE_WRITE=${PGDATABASE_WRITE}
+      - PGUSER_WRITE=${PGUSER_WRITE}
+      - PGPASSWORD_WRITE=${PGPASSWORD_WRITE}
+      - PGPORT_WRITE=${PGPORT_WRITE}
+      - PGHOST_WRITE=${PGHOST_WRITE=}
+      - PGDATABASE_READ=${PGDATABASE_READ}
+      - PGUSER_READ=${PGUSER_READ}
+      - PGPASSWORD_READ=${PGPASSWORD_READ}
+      - PGPORT_READ=${PGPORT_READ}
+      - PGHOST_READ=${PGHOST_READ}
     networks:
       nostpy_network:
         ipv4_address: 172.28.0.3
@@ -44,9 +44,9 @@ services:
   postgres:
     image: postgres:14
     environment:
-      - POSTGRES_DB=${PGDATABASE}
-      - POSTGRES_USER=${PGUSER}
-      - POSTGRES_PASSWORD=${PGPASSWORD}
+      - POSTGRES_DB=${PGDATABASE_WRITE}
+      - POSTGRES_USER=${PGUSER_WRITE}
+      - POSTGRES_PASSWORD=${PGPASSWORD_WRITE}
     ports:
       - 5432:5432
     networks:
@@ -78,7 +78,7 @@ services:
     environment:
       - DOMAIN=${DOMAIN}
       - DOCKER_SVC=172.17.0.1
-      - SVC_PORT=8008
+      - SVC_PORT=${EVENT_HANDLER_PORT}
       - VERSION=${VERSION}
       - CONTACT=${CONTACT}
       - HEX_PUBKEY=${HEX_PUBKEY}
