--- a/docker_stuff/.env
+++ b/docker_stuff/.env
@@ -4,11 +4,16 @@ PGPASSWORD=nostr
 PGPORT=5432
 PGHOST=postgres
 DD_ENV=psycopg_otel
+EVENT_HANDLER_PORT=
+EVENT_HANDLER_SVC=172.28.0.3
+WS_PORT=8008
 REDIS_HOST=redis
+REDIS_PORT=6739
 DD_API_KEY=<YOUR_API_KEY>
 DOMAIN=<YOUR_DOMAIN_HERE>
 HEX_PUBKEY=<YOUR_HEX_PUBKEY>
 CONTACT=your_email@email.com
 ENV_FILE_PATH=./docker_stuff/.env
 NGINX_FILE_PATH=/etc/nginx/sites-available/default
-VERSION=v1.0
+VERSION=v1.0.0
+
