--- a/docker_stuff/Dockerfile.websocket_handler
+++ b/docker_stuff/Dockerfile.websocket_handler
@@ -9,11 +9,10 @@ RUN apt-get update \
         g++ \
         make \
     && rm -rf /var/lib/apt/lists/*
+
 COPY ws_requirements.txt .
 RUN pip install --no-cache-dir -r ws_requirements.txt
 
-COPY ./python_stuff/websocket_handler.py .
-COPY ./python_stuff/websocket_classes.py .
+COPY ./python_stuff/websocket*.py ./
 
-
-CMD [ "python", "websocket_handler.py"]
+CMD ["python", "websocket_handler.py"]
