--- a/docker_stuff/Dockerfile.event_handler
+++ b/docker_stuff/Dockerfile.event_handler
@@ -1,6 +1,5 @@
 FROM python:3.11-slim
 
-# Update package lists and install necessary dependencies
 RUN apt-get update \
     && apt-get install -y --no-install-recommends \
         gcc \
@@ -9,18 +8,11 @@ RUN apt-get update \
         g++ \
         make \
     && rm -rf /var/lib/apt/lists/*
-
-# Set the working directory in the container
 WORKDIR /app
 
-# Copy requirements file and install dependencies
 COPY eh_requirements.txt .
 RUN pip install --no-cache-dir -r eh_requirements.txt
 
-# Copy application code
-COPY ./python_stuff/event_handler.py .
-COPY ./python_stuff/event_classes.py .
-#"opentelemetry-instrument",
-# Instrument the application with OpenTelemetry and set the command to run the application
-CMD [ "python", "event_handler.py"]
+COPY ./python_stuff/event*.py ./
 
+CMD ["python", "event_handler.py"]
