Fix equal error

--- a/docker_stuff/docker-compose.yaml
+++ b/docker_stuff/docker-compose.yaml
@@ -28,7 +28,7 @@ services:
       - PGUSER_WRITE=${PGUSER_WRITE}
       - PGPASSWORD_WRITE=${PGPASSWORD_WRITE}
       - PGPORT_WRITE=${PGPORT_WRITE}
-      - PGHOST_WRITE=${PGHOST_WRITE=}
+      - PGHOST_WRITE=${PGHOST_WRITE}
       - PGDATABASE_READ=${PGDATABASE_READ}
       - PGUSER_READ=${PGUSER_READ}
       - PGPASSWORD_READ=${PGPASSWORD_READ}
