--- a/docker_stuff/config-opentelemetry.yaml
+++ b/docker_stuff/config-opentelemetry.yaml
@@ -51,24 +51,6 @@ receivers:
       network:
       processes:
 
-  prometheus:
-    config:
-      scrape_configs:
-        - job_name: 'otelcol'
-          scrape_interval: 10s
-          static_configs:
-            - targets: ['0.0.0.0:8888']
-
-  filelog:
-    include_file_path: true
-    poll_interval: 500ms
-    include:
-      - /var/log/*/app.log
-    operators:
-      - type: json_parser
-      - type: time_parser
-        parse_from: attributes.time
-        layout: '%Y-%m-%dT%H:%M:%S%z'
 
 processors:
   batch:
@@ -105,8 +87,6 @@ processors:
         value: nostpy-otel
         action: upsert
 
-connectors:
-  datadog/connector:
 
 exporters:
   datadog/exporter:
@@ -121,7 +101,7 @@ service:
     traces:
       receivers: [otlp]
       processors: [memory_limiter, batch, resourcedetection, attributes]
-      exporters: [datadog/connector, datadog/exporter]
+      exporters: [datadog/exporter]
     metrics:
       receivers: [datadog/connector, otlp, hostmetrics, docker_stats]
       processors: [memory_limiter, batch, resourcedetection, attributes]
