Re add connecttor

--- a/docker_stuff/config-opentelemetry.yaml
+++ b/docker_stuff/config-opentelemetry.yaml
@@ -88,6 +88,9 @@ processors:
         action: upsert
 
 
+connectors:
+  datadog/connector:
+
 exporters:
   datadog/exporter:
     api:
@@ -101,7 +104,7 @@ service:
     traces:
       receivers: [otlp]
       processors: [memory_limiter, batch, resourcedetection, attributes]
-      exporters: [datadog/exporter]
+      exporters: [datadog/connector, datadog/exporter]
     metrics:
       receivers: [datadog/connector, otlp, hostmetrics, docker_stats]
       processors: [memory_limiter, batch, resourcedetection, attributes]
