--- a/docker_stuff/docker-compose.yaml
+++ b/docker_stuff/docker-compose.yaml
@@ -5,7 +5,7 @@ services:
       context: .
       dockerfile: Dockerfile.websocket_handler
     environment:
-      - OTEL_EXPORTER_OTLP_ENDPOINT="opentelemetry-collector:4317"
+      - OTEL_EXPORTER_OTLP_ENDPOINT="http://opentelemetry-collector:4317"
       - EVENT_HANDLER_SVC=${EVENT_HANDLER_SVC}
       - EVENT_HANDLER_PORT=${EVENT_HANDLER_PORT}
       - WS_PORT=${WS_PORT}
@@ -20,7 +20,7 @@ services:
       context: .
       dockerfile: Dockerfile.event_handler
     environment:
-      - OTEL_EXPORTER_OTLP_ENDPOINT="opentelemetry-collector:4317"
+      - OTEL_EXPORTER_OTLP_ENDPOINT="http://opentelemetry-collector:4317"
       - EVENT_HANDLER_PORT=${EVENT_HANDLER_PORT}
       - REDIS_HOST=${REDIS_HOST}
       - REDIS_PORT=${REDIS_PORT}
@@ -92,7 +92,7 @@ services:
       - websocket_handler
 
   opentelemetry-collector:
-    image: otel/opentelemetry-collector-contrib:latest
+    image: otel/opentelemetry-collector-contrib:0.103.1
     environment:
       - DD_API_KEY=${DD_API_KEY}
     volumes:
