--- a/docker_stuff/config-opentelemetry.yaml
+++ b/docker_stuff/config-opentelemetry.yaml
@@ -105,10 +105,10 @@ service:
       receivers: [otlp]
       processors: [memory_limiter, batch, resourcedetection, attributes]
       exporters: [datadog/exporter] #datadog/connector,
-    #metrics:
-    #  receivers: [datadog/connector, otlp, hostmetrics, docker_stats]
-    #  processors: [memory_limiter, batch, resourcedetection, attributes]
-    #  exporters: [datadog/exporter]
+    metrics:
+      receivers: [datadog/connector, otlp, hostmetrics, docker_stats]
+      processors: [memory_limiter, batch, resourcedetection, attributes]
+      exporters: [datadog/exporter]
   telemetry:
     logs:
       level: "debug"
