--- a/docker_stuff/config-opentelemetry.yaml
+++ b/docker_stuff/config-opentelemetry.yaml
@@ -104,9 +104,13 @@ service:
     traces:
       receivers: [otlp]
       processors: [memory_limiter, batch, resourcedetection, attributes]
-      exporters: [datadog/exporter] #datadog/connector,
+      exporters: [datadog/connector, datadog/exporter]
     metrics:
       receivers: [datadog/connector, otlp, hostmetrics, docker_stats]
+      processors: [memory_limiter, batch, resourcedetection, attributes]
+      exporters: [datadog/exporter]
+    logs:
+      receivers: [otlp, filelog]
       processors: [memory_limiter, batch, resourcedetection, attributes]
       exporters: [datadog/exporter]
   telemetry:
