--- a/docker_stuff/config-opentelemetry.yaml
+++ b/docker_stuff/config-opentelemetry.yaml
@@ -2,7 +2,9 @@ receivers:
   otlp:
     protocols:
       http:
+        endpoint: 0.0.0.0:4318
       grpc:
+        endpoint: 0.0.0.0:4317
 
   docker_stats:
     endpoint: unix:///var/run/docker.sock
@@ -49,24 +51,6 @@ receivers:
       network:
       processes:
 
-  prometheus:
-    config:
-      scrape_configs:
-        - job_name: 'otelcol'
-          scrape_interval: 10s
-          static_configs:
-            - targets: ['0.0.0.0:8888']
-
-  filelog:
-    include_file_path: true
-    poll_interval: 500ms
-    include:
-      - /var/log/*/app.log
-    operators:
-      - type: json_parser
-      - type: time_parser
-        parse_from: attributes.time
-        layout: '%Y-%m-%dT%H:%M:%S%z'
 
 processors:
   batch:
@@ -103,6 +87,7 @@ processors:
         value: nostpy-otel
         action: upsert
 
+
 connectors:
   datadog/connector:
 
@@ -122,10 +107,6 @@ service:
       exporters: [datadog/connector, datadog/exporter]
     metrics:
       receivers: [datadog/connector, otlp, hostmetrics, docker_stats]
-      processors: [memory_limiter, batch, resourcedetection, attributes]
-      exporters: [datadog/exporter]
-    logs:
-      receivers: [otlp, filelog]
       processors: [memory_limiter, batch, resourcedetection, attributes]
       exporters: [datadog/exporter]
   telemetry:
