--- a/docker_stuff/docker-compose.yaml
+++ b/docker_stuff/docker-compose.yaml
@@ -5,7 +5,7 @@ services:
       context: .
       dockerfile: Dockerfile.websocket_handler
     environment:
-      - OTEL_EXPORTER_OTLP_ENDPOINT=http://172.28.0.7:4317
+      - OTEL_EXPORTER_OTLP_ENDPOINT=http://opentelemetry-collector:4317
       - EVENT_HANDLER_SVC=${EVENT_HANDLER_SVC}
       - EVENT_HANDLER_PORT=${EVENT_HANDLER_PORT}
       - WS_PORT=${WS_PORT}
@@ -20,7 +20,7 @@ services:
       context: .
       dockerfile: Dockerfile.event_handler
     environment:
-      - OTEL_EXPORTER_OTLP_ENDPOINT=http://172.28.0.7:4317
+      - OTEL_EXPORTER_OTLP_ENDPOINT=http://opentelemetry-collector:4317
       - EVENT_HANDLER_PORT=${EVENT_HANDLER_PORT}
       - REDIS_HOST=${REDIS_HOST}
       - REDIS_PORT=${REDIS_PORT}
@@ -28,7 +28,7 @@ services:
       - PGUSER_WRITE=${PGUSER_WRITE}
       - PGPASSWORD_WRITE=${PGPASSWORD_WRITE}
       - PGPORT_WRITE=${PGPORT_WRITE}
-      - PGHOST_WRITE=${PGHOST_WRITE=}
+      - PGHOST_WRITE=${PGHOST_WRITE}
       - PGDATABASE_READ=${PGDATABASE_READ}
       - PGUSER_READ=${PGUSER_READ}
       - PGPASSWORD_READ=${PGPASSWORD_READ}
@@ -57,7 +57,7 @@ services:
       - ./postgresql.conf:/postgresql.conf
       - ./postgresql/data:/var/lib/postgresql/data
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${PGUSER}"] # database username here - nostr, should be changed if other user
+      test: ["CMD-SHELL", "pg_isready -U ${PGUSER_WRITE}"] # database username here - nostr, should be changed if other user
       interval: 10s
       timeout: 5s
       retries: 5
@@ -78,7 +78,7 @@ services:
     environment:
       - DOMAIN=${DOMAIN}
       - DOCKER_SVC=172.17.0.1
-      - SVC_PORT=${EVENT_HANDLER_PORT}
+      - SVC_PORT=${WS_PORT}
       - VERSION=${VERSION}
       - CONTACT=${CONTACT}
       - HEX_PUBKEY=${HEX_PUBKEY}
@@ -92,7 +92,7 @@ services:
       - websocket_handler
 
   opentelemetry-collector:
-    image: otel/opentelemetry-collector-contrib:latest
+    image: otel/opentelemetry-collector-contrib:0.103.1
     environment:
       - DD_API_KEY=${DD_API_KEY}
     volumes:
@@ -107,7 +107,6 @@ services:
     ports:
       - "55680:55680"
       - "4317:4317"
-      - "4318:4318"
     command: ["--config=/etc/otel/config.yaml"]
 
 volumes:
