--- a/docker_stuff/config-opentelemetry.yaml
+++ b/docker_stuff/config-opentelemetry.yaml
@@ -85,6 +85,9 @@ processors:
       - key: deployment.environment
         value: nostpy-otel
         action: upsert
+      - key: dd.env
+        value: nostpy-otel
+        action: upsert
 
 connectors:
   datadog/connector:
