add manual dd env attribute

--- a/docker_stuff/config-opentelemetry.yaml
+++ b/docker_stuff/config-opentelemetry.yaml
@@ -53,13 +53,17 @@ receivers:
 
 processors:
   batch:
-    send_batch_max_size: 1000
-    send_batch_size: 100
-    timeout: 10s
+    timeout: 5s                      # Reduce the timeout to process batches more frequently
+    send_batch_size: 512             # Increase the batch size to send more data at once
+    send_batch_max_size: 4096        # Allow larger maximum batch size
+    sending_queue:
+      queue_size: 8192               # Increase the queue size to handle more pending data
+
   memory_limiter:
     check_interval: 1s
     limit_mib: 4000
     spike_limit_mib: 800
+
   resourcedetection:
     detectors: [env, ec2, system]
     system:
@@ -80,6 +84,7 @@ processors:
           enabled: true
         host.cpu.cache.l2.size:
           enabled: true
+
   attributes:
     actions:
       - key: deployment.environment
