--- a/docker_stuff/config-opentelemetry.yaml
+++ b/docker_stuff/config-opentelemetry.yaml
@@ -58,8 +58,8 @@ processors:
     timeout: 10s
   memory_limiter:
     check_interval: 1s
-    limit_mib: 1000
-    spike_limit_mib: 800
+    limit_percentage: 80
+    spike_limit_percentage: 60
   resourcedetection:
     detectors: [env, ec2, system]
     system:
