--- a/docker/Dockerfile.event_handler
+++ b/docker/Dockerfile.event_handler
@@ -13,6 +13,6 @@ WORKDIR /app
 COPY eh_requirements.txt .
 RUN pip install --no-cache-dir -r eh_requirements.txt
 
-COPY ./python_stuff/event*.py ./
+COPY ./src/event*.py ./
 
 CMD ["python", "event_handler.py"]
