--- a/docker/Dockerfile.updater
+++ b/docker/Dockerfile.updater
@@ -14,7 +14,7 @@ RUN pip install --no-cache-dir -r up_requirements.txt
 
 COPY ./src/updater.py ./
 COPY ./src/static ./static
-COPY ./src/index.html ./static/index.html
+COPY ./src/static/index.html ./static/index.html
 
 
 EXPOSE 8000
