--- a/docker/nginx.conf.template
+++ b/docker/nginx.conf.template
@@ -34,7 +34,7 @@ server {
         proxy_set_header Host $host;
     }
 
-    location /updater {
+    location = /updater {
         proxy_pass http://${DOCKER_SVC}:${MU_PORT};
         proxy_http_version 1.1;
         proxy_set_header Host $host;
