update path for proxy

--- a/docker/nginx.conf.template
+++ b/docker/nginx.conf.template
@@ -20,19 +20,7 @@ server {
     keepalive_timeout 70;
 
     # Exact match for /updater to avoid WebSocket upgrades
-    location = /updater {
-        proxy_pass http://${DOCKER_SVC}:${MU_PORT};
-        proxy_http_version 1.1;
-        proxy_set_header Host $host;
-        proxy_read_timeout 60;
-        proxy_send_timeout 60;
-
-        # Ensure this path doesn't upgrade to WebSocket
-        proxy_set_header Connection "keep-alive";
-        proxy_set_header Upgrade "";
-    }
-
-    location = /scan {
+    location ^~ /updater {
         proxy_pass http://${DOCKER_SVC}:${MU_PORT};
         proxy_http_version 1.1;
         proxy_set_header Host $host;
