--- a/docker/Dockerfile.updater
+++ b/docker/Dockerfile.updater
@@ -16,7 +16,9 @@ COPY ./src/updater.py ./
 COPY ./src/static ./static
 COPY ./src/static/index.html ./static/index.html
 
+RUN pip install ddtrace
+
 
 EXPOSE 8000
 
-CMD ["uvicorn", "updater:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
+CMD ["ddtrace-run", "uvicorn", "updater:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
