--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -148,12 +148,39 @@ services:
       - "8000:8000"
     restart: unless-stopped
     environment:
-      - DD_AGENT_HOST=docker.host.internal
+      - DD_AGENT_HOST=datadog
       - DD_SERVICE=metadata-updater
-      - DD_ENV=nostpy-otel
+      - DD_ENV=nostpy-profile
       - DD_PROFILING_ENABLED=true
-    extra_hosts:
-      - "host.docker.internal:host-gateway"
+
+  datadog:
+    image: gcr.io/datadoghq/agent:7
+    environment:
+      - DD_API_KEY=${DD_API_KEY}
+      - DD_LOGS_ENABLED=true
+      - DD_LOGS_CONFIG_CONTAINER_COLLECT_ALL=true
+      - DD_HOSTNAME=nostpy-profile
+      - DD_SYSTEM_PROBE_NETWORK_ENABLED=true 
+      - DD_PROCESS_AGENT_ENABLED=true
+      - DD_ENV=nostpy-profile 
+      - DD_APM_NONLOCAL_TRAFFIC=true
+      - DD_DOGSTATSD_NONLOCAL_TRAFFIC=true
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock:ro
+      - /proc/:/host/proc/:ro
+      - /sys/fs/cgroup/:/host/sys/fs/cgroup:ro
+      - /sys/kernel/debug:/sys/kernel/debug
+    cap_add:
+      - SYS_ADMIN
+      - SYS_RESOURCE
+      - SYS_PTRACE
+      - NET_ADMIN
+      - NET_BROADCAST
+      - NET_RAW
+      - IPC_LOCK
+      - CHOWN
+    security_opt:
+      - apparmor:unconfined
 
 volumes:
   postgres_data:
